tests/NormalTests/paczka1/fuzzy1/61846599.err
Error in line 1: 4WZ3CT5n A490 70,9
Error in line 9: A900 A490 44,5
Error in line 19: Uuj8MI A490 53,62
Error in line 21: 4WZ3CT5n A415 222,7
Error in line 24: iacytHMUk A415 62,3
Error in line 28: A900 A768 36,6
Error in line 27: RHGm A490 28,7
Error in line 37: A900 A768 83,83
Error in line 34: A900 A900 51,8
